# tennis-points

./: .env.production  .gitignore  CLAUDE.md  Dockerfile  README.md  THA年度赛事积分系统Phase开发计划.md  THA年度赛事积分系统架构设计.md  deploy.sh  docker-compose.yml  render.yaml  网球赛事积分与排名系统需求与架构设计.md
backend/: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  redis.py  security.py
backend/app/models/: __init__.py  base.py  entries_points.py  event_result.py  event_result_player.py  player.py  points_rule.py  season.py  team.py  team_member.py  tournament.py  upload.py  user.py
backend/app/processors/: excel_parser.py  points_generator.py
backend/app/repositories/: entries_points_repo.py  event_result_repo.py  player_repo.py  points_rule_repo.py  ranking_repo.py  season_repo.py  tournament_repo.py  upload_repo.py
backend/app/routers/: auth.py  dashboard.py  health.py  players.py  points_rules.py  public.py  rankings.py  seasons.py  tournaments.py  uploads.py
backend/app/schemas/: auth.py  common.py  dashboard.py  player.py  points_rule.py  ranking.py  season.py  tournament.py  upload.py
backend/app/scripts/: seed.py  seed_full.py
backend/app/services/: auth_service.py  player_service.py  points_rule_service.py  points_service.py  (+4 more)
backend/templates/: 选手批量导入模板.xlsx
backend/tests/: conftest.py  test_auth.py  test_health.py  test_players.py  test_points_rules.py  test_rankings.py  test_seasons.py  test_tournaments.py  test_uploads.py
(+99 files in other folders)
